opam-version: "2.0"
name: "fl_jikken"
version: "1.7.5"
synopsis: "Check program for FL jikken"
authors: [ "Ken, Sakayori <sakayori@is.s.u-tokyo.ac.jp>" ]
maintainer: ["Ken, Sakayori <sakayori@is.s.u-tokyo.ac.jp>"]
homepage: ["https://github.com/KenSakayori/fl_jikken"]
bug-reports: ["https://github.com/KenSakayori/fl_jikken/issues"]

depends: [
  "ocaml" {= "5.1.0"}
  "ocamlfind"
  "dune"
  "batteries"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [
  ["dune" "install"]
  ["ocamlfind" "install" "fl-jikken-unifier" "unifier/META" "unifier/constraintSolver.cmi" "unifier/constraintSolver.cmo" "unifier/constraintSolver.mli" "unifier/tySyntax.cmi" "unifier/tySyntax.cmo" "unifier/tySyntax.mli"]
]
